--- a/templates/CreateKey.html
+++ b/templates/CreateKey.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student ID and Qualification Code Form</title>
+    <title>Generate key</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/CreateKey.css') }}">
 </head>
 
 <body>
     <form id="student-id-and-qualification-code-form">
         <label for="SchoolName">Generate key</label>
-        <label for="SchoolName">Enter your School Name:</label>
-        <input type="text" id="SchoolName" name="School Name" placeholder="Enter your School Name">
         <button type="submit">Create Key</button>
     </form>
     <!-- Modal structure -->
