--- a/templates/GetSchool.html
+++ b/templates/GetSchool.html
@@ -9,6 +9,7 @@
 
 <body>
     <form id="student-id-and-qualification-code-form">
+        <label for="SchoolName">Get Certificate and public key</label>
         <label for="SchoolName">Enter School Name:</label>
         <input type="text" id="SchoolName" name="School Name" placeholder="Enter School Name">
         <button type="submit">Get Certificate and Public key</button>
