--- a/templates/School.html
+++ b/templates/School.html
@@ -10,11 +10,11 @@
     <div class="container">
         <h1>Choose an Option</h1>
         <div class="button-container">
-            <button class="btn" id="CreateSchool">Create School</button>
             <button class="btn" id="CreateRequestCertificate">Create Certificate Signing Request</button>
             <button class="btn" id="CreateCertificate">Create Certificate</button>
             <button class="btn" id="Createkey">Create key</button>
             <button class="btn" id="IssueQualificate">Issue Qualification</button>
+            <button class="btn" id="logout">Logout</button>
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/School.js') }}"></script>
