--- a/templates/get.html
+++ b/templates/get.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form id="student-id-and-qualification-code-form">
+        <label for="student-id">Get your qualification</label>
         <label for="student-id">Student ID:</label>
         <input type="text" id="student-id" name="student-id" placeholder="Enter your student ID">
         <label for="qualification-code">Qualification Code:</label>
