--- a/templates/signing.html
+++ b/templates/signing.html
@@ -33,7 +33,7 @@
                 </fieldset>
 
                 <fieldset>
-                    <legend>Nhập thông tin học sinh</legend>
+                    <legend>Nhập thông tin sinh viên</legend>
                     <label for="school">Student ID:</label>
                     <input type="text" id="school" name="school" required>
                     <br>
