--- a/templates/verify.html
+++ b/templates/verify.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student ID and Qualification Code Form</title>
+    <title>Verify</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/verify.css') }}">
 </head>
 <body>
     <form id="student-id-and-qualification-code-form">
         <label for="qualification-code">Enter Qualification Code:</label>
-        <input type="text" id="qualification-code" name="qualification-code" placeholder="Enter your qualification code">
+        <input type="text" id="qualification-code" name="qualification-code" placeholder="Enter qualification code">
         <label for="qualification-file">Choose Qualification File:</label>
         <input type="file" id="qualification-file" name="qualification-file" accept=".pdf, .doc, .docx">
         <label for="public-key-file">Choose Public Key File:</label>
