--- a/templates/Company.html
+++ b/templates/Company.html
@@ -11,7 +11,7 @@
         <h1>Choose an Option</h1>
         <div class="button-container">
             <button class="btn" id="GetSchool">Get Public and Certificate</button>
-            <button class="btn" id="verify">Verify File</button>
+            <button class="btn" id="verify">Verify Qualificate</button>
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/Company.js') }}"></script>
