--- a/templates/register.html
+++ b/templates/register.html
@@ -15,9 +15,9 @@
         <label for="Name">Enter UseName:</label>
         <input type="text" id="Name" name="Name" placeholder="Enter usename">
         <label for="Name">Enter password:</label>    
-        <input type="text" id="password" name="Name" placeholder="Enter password">
+        <input type="password"  id="password" name="Name" placeholder="Enter password">
         <label for="Name">Enter confirm password:</label>    
-        <input type="text" id="confirm-password" name="Name" placeholder="Enter password">
+        <input type="password"  id="confirm-password" name="Name" placeholder="Enter password">
         <button type="submit">Register</button>
     </form>
     <!-- Modal structure -->
