--- a/templates/Company.html
+++ b/templates/Company.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <h1>Verify Page</h1>
         <h1>Choose an Option</h1>
         <div class="button-container">
-            <button class="btn" id="GetSchool">Get Public and Certificate</button>
-            <button class="btn" id="verify">Verify Qualificate</button>
+            <button class="btn" id="login">Login</button>
+            <button class="btn" id="signup">register</button>
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/Company.js') }}"></script>
