--- a/templates/School.html
+++ b/templates/School.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Choose an Option</h1>
+        <h1>School option</h1>
+        <h2>Choose an Option</h2>
         <div class="button-container">
             <button class="btn" id="CreateRequestCertificate">Create Certificate Signing Request</button>
             <button class="btn" id="CreateCertificate">Create Certificate</button>
