--- a/templates/account.html
+++ b/templates/account.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h1> School Page </h1>
         <h1>Choose an Option</h1>
         <div class="button-container">
             <button class="btn" id="login">Login</button>
