--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,7 @@
         <h1>Choose an Option</h1>
         <div class="button-container">
             <button class="btn" id="School">School</button>
-            <button class="btn" id="company">Company</button>
-            <button class="btn" id="getQuali">Student</button>
+            <button class="btn" id="company">Verifier</button>
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
