--- a/templates/verify.html
+++ b/templates/verify.html
@@ -10,11 +10,13 @@
     <form id="student-id-and-qualification-code-form">
         <label for="qualification-code">Enter Qualification Code:</label>
         <input type="text" id="qualification-code" name="qualification-code" placeholder="Enter qualification code">
+        <label for="qualification-code">Enter School Name:</label>
+        <input type="text" id="school_name" name="qualification-code" placeholder="Enter qualification code">
         <label for="qualification-file">Choose Qualification File:</label>
         <input type="file" id="qualification-file" name="qualification-file" accept=".pdf, .doc, .docx">
         <label for="public-key-file">Choose Public Key File:</label>
         <input type="file" id="public-key-file" name="public-key-file">
-        <button type="submit">Get Qualifications</button>
+        <button type="submit">Verify Qualifications</button>
     </form>
     <!-- Modal structure -->
     <div id="myModal" class="modal">
